welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:60: error: ';' expected but '(' found.
  move(2,false);droite():move(6,false)
                             ^